<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:background="@color/extra_dark_gray"
    tools:context=".DetailFragment">


    <TextView
        android:id="@+id/selectToStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/selectImage"
        android:textSize="25sp"
        android:textColor="@color/soft_gray"
        app:drawableTopCompat="@drawable/imageplaceholder"
        android:drawablePadding="10dp"/>

    <com.example.picbook.ZoomImageView
        android:id="@+id/imageDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/imageName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/detailImage"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/imageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/imageName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout>